Modify AllowedPlacesType API service
